--- a/hello_export_symbol/Makefile
+++ b/hello_export_symbol/Makefile
@@ -1,5 +1,5 @@
 obj-m = -DEXPORT_SYMTAB #exporting functions to symbol tables
-obj-m += module1.o module2.o
+obj-m = module1.o module2.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
